kubernetes/core/network/external-dns/pihole/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns-pihole
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-dns
      app.kubernetes.io/instance: external-dns-pihole

  egress:
    - toCIDR:
        - ${NAS}/32 # PiHole
      toPorts:
        - ports:
            - port: "3001"
